testsuite/deprecated/veronac/resolution/compile-pass/interleaved.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
// Field and method definitions can be interleaved

class A {
  foo() {}
  field1: U64;
  bar() {}
  field2: U64;
}

class Main {
  main() { }
}
