testsuite/deprecated/veronac/resolution/compile-fail/module/child.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT

class A {
  m(x: T) {}
}
